s/new (Boolean|Byte|Double|Float|Integer|Long|Short)\(/\1.valueOf(/g
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@712913 13f79535-47bb-0310-9956-ffa450edef68